# SDKtest

./: .gitignore  2DRefineElements_C_allElem.nas  CMakeLists.txt  README.md  build.bat  plate.stp  plate_surfWrapper.nas  reasonix.toml  refineElem_C.nas  triangle.nas
.reasonix/truncated-results/: 1781682921423-696a240c-run_command.txt  1782088617701-e8a2299e-run_command.txt
config/: test_config.json
models/: 0006_3boxesblend_06.step  11_slice.step  cube_cylinder.step  face_wo_seam.step  imprint.nas  midsurf_2022_07_11.step  mixed_solids_SharedTopo.nas  simple_chamfer_cylinder.step  twoCubic_1.nas
reports/: test_report.html
reports/data/: report_20260723_151733.json  report_20260723_161834.json  report_20260724_142352.json  report_20260724_144330.json
src/: main.cpp  template_report.html
src/core/: ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h  ReportExporter.cpp  ReportExporter.h  ResultParser.cpp  ResultParser.h  StepReader.cpp  StepReader.h  TestLoader.cpp  TestLoader.h  TestRunner.cpp  TestRunner.h  XlsxWriter.cpp  XlsxWriter.h
src/models/: TestResult.h
src/ui/: FilterEditDialog.cpp  FilterEditDialog.h  MainWindow.cpp  MainWindow.h  Model3DViewer.cpp  Model3DViewer.h  ModelInfoPanel.cpp  ModelInfoPanel.h  ModelRenderView.cpp  ModelRenderView.h  TestListPanel.cpp  TestListPanel.h  TestProgressPanel.cpp  TestProgressPanel.h
